@@ -492,7 +492,8 @@ def tkGetParam(options, title = '', description='', details='', checkUnprocessed
       colCount += 1
        # put default value into the entryWidget
       if values[g] != None:
-        if type(values[g]) in [types.ListType, types.TupleType]:
+        # len()>0 to avoid emtpy string with emtpy list
+        if type(values[g]) in [types.ListType, types.TupleType] and len(values[g])>0:
           entryWidgets[g].insert(0, ', '.join(map(str, values[g])))
         else:
           entryWidgets[g].insert(0,str(values[g]))
@@ -712,7 +713,7 @@ def wxGetParam(options, title = '', description='', details='', checkUnprocessed
       # put default value into the entryWidget
       txt = ''
       if values[g] != None:
-       if type(values[g]) in [types.ListType, types.TupleType]:
+       if type(values[g]) in [types.ListType, types.TupleType] and len(values[g])>0:
          txt =  ', '.join(map(str, values[g]))
        else:
          txt = str(values[g])
