@@ -438,7 +438,7 @@ Number of ancestral population: %d
       self.pop.ancestralDepth() )
     generalInfo += "Locus positions on chromosome: \n"
     for ch in range(self.pop.numChrom()):
-      generalInfo += "  " + ", ".join([str(self.pop.locusDist( self.pop.absLocusIndex(ch,a))) for a in range(self.pop.numLoci(ch))]) + "\n"      
+      generalInfo += "  " + ", ".join([str(self.pop.locusPos( self.pop.absLocusIndex(ch,a))) for a in range(self.pop.numLoci(ch))]) + "\n"      
     generalInfo += "Locus names: \n"
     for ch in range(self.pop.numChrom()):
       generalInfo += "  " + ", ".join([self.pop.locusName( self.pop.absLocusIndex(ch,a)) for a in range(self.pop.numLoci(ch))]) + "\n"    
