@@ -60,10 +60,10 @@ tests = [
   ['ind.numLoci(0)', '', 5, ''],
   ['ind.numLoci(1)', '', 7, ''],
   ['ind.numLoci(2)', '', '', IndexError],
-  ['ind.locusDist(10)', '', 6, ''],
+  ['ind.locusPos(10)', '', 6, ''],
   ['ind.absLocusIndex(1,5)', '', 10, ''],
   ['ind.chromLocusPair(10)', '', (1,5), ''],
-  ['ind.locusDist( ind.absLocusIndex(1,2) )', '', 3, ''],
+  ['ind.locusPos( ind.absLocusIndex(1,2) )', '', 3, ''],
   ['len(ind.arrLociDist())', '', 12, ''],
   ['ad[0]','ad=ind.arrLociDist()\nad[0]=1.5', 1.5, ''],
   ['ind.chromBegin(1)', '', 5, ''],
